src/objects/Policies_Credential__mdt.object
<CustomObject>
    <fields>
        <fullName>FedEx_Error_Message__c</fullName>
        <label>FedEx Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Policy_Number__c</fullName>
        <label>Output Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <label>Policy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Policies Credential</label>
    <pluralLabel>Policies Credentials</pluralLabel>
</CustomObject>